Fix alignments for tablet styling

--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -28,10 +28,10 @@ ul{
 
 .wrapper {
     max-width: 1200px;
-    margin: 0 1rem;
+    margin: 2.5rem 1rem;
 
     @media (min-width: $tablet) {
-        margin: 1rem;
+        margin: 6rem 2rem;
     }
 
     @media (min-width: $desktop) {
